src/classes/pages/assets/css/style.css
/* ... */
input,
textarea,
select {
    background: var(--background-surface1);
    color: currentColor;
    border: none;
    outline: solid 2px transparent;
    padding: 0.5rem 0.75rem;
    font-size: 16px;
    height: max-content;
    max-width: 100%;
    border-radius: 0 !important;
    transition:
        background 0.15s,
        outline 0.15s,
        opacity 0.15s,
        filter 0.15s;
}

input.round,
textarea.round,
select.round {
    border-radius: var(--u-04) !important;
}

input:invalid,
textarea:invalid,
select:invalid,
input.invalid {
    /* so, the idea behind this is because the input is technically wrong... but it isn't required,
       we're only going to show a yellow "border" thing! */
    background-clip: padding-box;
    outline: solid 2px var(--yellow) !important;
}

input:invalid:required,
textarea:invalid:required,
select:invalid:required {
    outline: solid 2px var(--red) !important;
}

input:disabled,
textarea:disabled,
.checkbox-container.disabled,
select:disabled {
    opacity: 50%;
    box-shadow: inset 0 0 0 2px var(--background-surface3);
    filter: opacity(50%);
    cursor: not-allowed !important;
}

input.secondary,
textarea.secondary,
select.secondary {
    background: var(--background-surface);
}

textarea {
    resize: vertical;
}

.checkbox-container.secondary {
    background: var(--background-surface);
}

.checkbox-container {
    background: var(--background-surface1);
    padding: 0.5rem 0.75rem;
    display: flex;
    justify-content: center;
    align-items: center;
    height: 2.5rem; /* should match the height of an input element */
    width: 2.5rem;
    cursor: pointer;
    gap: 0.5rem;
}

.checkbox-container + input {
    width: calc(18rem - 2.5rem) !important; /* normal input width - checkbox width */
}

/* not checked */
.checkbox-container input[type="checkbox"]:not(:checked) + .check,
.checkbox-container input[type="checkbox"]:checked + * + .x {
    display: none;
}

.checkbox-container input[type="checkbox"]:checked + .check,
.checkbox-container input[type="checkbox"]:not(:checked) + * + .x {
    display: flex;
    justify-content: center;
    align-items: center;
}

.checkbox-container input[type="checkbox"] {
    display: none;
}

label {
    user-select: none;
    -webkit-user-select: none;
}

img {
    max-width: 100%;
    vertical-align: middle;
}

hr {
    margin: 1rem 0;
    border: 0;
    border-top: solid 1px var(--background-surface1);
}

hr.small {
    margin: var(--u-02) 0;
}

html:not(.dark-theme) hr {
    border-color: hsl(var(--base-hue), var(--base-sat), calc(var(--base-lit) - 14%));
}

.editor-tab hr,
.builder\:card hr {
    /* editor-tab really just means markdown preview, it has a lighter background that matches
       the normal color of hr, so we need to make hr brighter when it is inside of that */
    border-color: rgba(120, 125, 125, 0.25);
}

span.highlight {
    background: var(--yellow1);
    padding: 0.2rem;
}

table {
    border-collapse: collapse;
    max-width: 100%;
    min-width: auto;
    overflow: auto;
}

table th {
    min-width: max-content;
    padding: 6px 10px;
    background: var(--background-surface2);
    border: none;
}

table td {
    border-left: solid 1px rgba(120, 125, 125, 0.1);
    padding: 10px;
    text-overflow: ellipsis;
    overflow: hidden;
    overflow-wrap: normal;
    word-break: normal;
    width: max-content;
}

table td:first-child {
    border-left: 0;
}

table tr {
    border-bottom: solid 1px rgba(120, 125, 125, 0.1);
}

table tr:nth-child(even) {
    background: var(--background-surface1a);
}

table td:focus-within {
    box-shadow: inset 0 0 0 1px var(--blue2);
}

table.force-full tr {
    text-align: center;
}

table.force-full td {
    white-space: pre;
    word-break: normal;
    width: max-content;
}

blockquote {
    padding-left: var(--u-04);
    border-left: solid 5px var(--background-surface);
    font-style: italic;
}

dialog {
    background: var(--background-surface);
    color: currentColor;
    border: none;
    position: fixed;
    margin: auto;
}

dialog h4 {
    margin-top: 0;
}

dialog::backdrop {
    background: rgba(0, 0, 0, 0.5);
    backdrop-filter: blur(5px);
}

dialog[open] {
    animation: Grow 0.15s 0s running;
}

.editor-tab h1,
.editor-tab h2,
.editor-tab h3,
.editor-tab h4,
.editor-tab h5,
.editor-tab h6 {
    width: 100%;
}

.editor-tab input {
    height: max-content;
}

.card {
    background: var(--background-surface);
    padding: 1rem;
    display: block;
    width: 100%;
    transition: all 0.15s;
    box-shadow: none;
}

.card.MaxContent {
    width: max-content !important;
}

.card.NoPadding {
    padding: 0 !important;
}

.card.border {
    border: solid 1px var(--background-surface2a);
}

.card.border.dashed {
    border-style: dashed;
}

.card.round {
    border-radius: var(--u-04);
}

.card.secondary {
    background: var(--background-surface1);
}

.card.hover:hover {
    background: var(--background-surface1);
}

.card.secondary.hover:hover {
    background: var(--background-surface1-5);
}

.card.GrowHover:hover {
    transform: scale(1.01);
    box-shadow: 0 0 2px var(--background-surface3);
}

details {
    background: var(--background-surface1);
    color: currentColor;
    border: none;
    outline: none;
    font-size: 16px;
    height: max-content;
    max-width: 100%;
    user-select: none;
    -webkit-user-select: none;
    appearance: none;
}

details summary::marker,
details summary::-webkit-details-marker {
    display: none;
}

details.details-confined {
    width: 18rem;
    max-width: 100%;
}

details * {
    max-width: 100%;
}

details summary {
    transition: all 0.15s;
    padding: 0.5rem 0.75rem;
    cursor: pointer;
    font-weight: 600;
    height: 40px; /* WHY is it normally 40.5px??? WHEN EVERTHING ELSE IS JUST 40!!! */
    list-style: none;
    display: flex;
    align-items: center;
}

details.secondary summary {
    background: var(--background-surface);
}
/* ... */

